--- a/ul/_config.yml
+++ b/ul/_config.yml
@@ -1,6 +1,4 @@
-server: false
-destination: /var/www/notclive.co.uk/ul/
-baseurl: http://notclive.co.uk/ul
+baseurl: /notclive.co.uk/ul/
 banner: /img/2011/Welsh-3000ers/banner.jpg
 
 markdown: rdiscount
