--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,7 @@ ul-base: /ul
 ul-banner: img/2011/Welsh-3000ers/banner.jpg
 
 permalink: /:categories/:year/:title
+
+paginate: 5
+paginate_path: /ul/:num/
+excerpt_separator: <!--more-->
