--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Ultralight
-ul-base: /ul
-ul-banner: img/2011/Welsh-3000ers/banner.jpg
 permalink: /:categories/:year/:title
+plugins:
+  - jekyll-redirect-from
 
 # Software Development
 theme: jekyll-theme-cayman
